--- a/inequallity-in-education.ipynb
+++ b/inequallity-in-education.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,8 @@
     "from sklearn.neighbors import NearestNeighbors\n",
     "from random import sample\n",
     "# from numpy.random import uniform\n",
-    "# from math import isnan\n",
+    "# from math import\n",
+    "# isnan\n",
     "\n",
     "# import warnings\n",
     "import warnings\n",
