--- a/inequallity-in-education.ipynb
+++ b/inequallity-in-education.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,24 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "import datasist as ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = \"I'm ready\"\n",
+    "print(m[4:8])"
    ]
   },
   {
